--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,4 +1,5 @@
 {
+  "emmet.includeLanguages": { "javascript": "javascriptreact" },
   "suggest.noselect": false,
   "coc.preferences.formatOnSaveFiletypes": [
     "scss",
