--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,29 +1,16 @@
 {
   "suggest.noselect": false,
   "coc.preferences.formatOnSaveFiletypes": [
+    "html",
     "scss",
     "css",
     "javascript",
+    "javascriptreact",
     "typescript",
     "typescriptreact",
     "json",
-    "javascriptreact",
-    "typescript.tsx",
+    "markdown",
     "graphql",
-    "c",
-    "cpp",
-    "html"
-  ],
-  "languageserver": {
-    "ccls": {
-      "command": "ccls",
-      "filetypes": ["c", "cc", "cpp", "c++", "objc", "objcpp"],
-      "rootPatterns": [".ccls", "compile_commands.json", ".git/", ".hg/"],
-      "initializationOptions": {
-        "cache": {
-          "directory": "/tmp/ccls"
-        }
-      }
-    }
-  }
+    "python"
+  ]
 }
